--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Ruby
-        uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
+        uses: ruby/setup-ruby@v8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
         with:
           ruby-version: '3.1'
           bundler-cache: true
@@ -31,6 +31,11 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+
+      - name: Install Gems
+        working-directory: learn-jekyll  # Install gems in the Jekyll directory
+        run: |
+          bundle install
 
       - name: Build with Jekyll
         working-directory: learn-jekyll  # Specify the folder where your Jekyll files are located
